清洗接口：fix